# libuser

./: .cvsignore  .gitignore  .hgignore  .hgtags  ChangeLog  Makefile.am  Makefile.extra  NEWS  README  TODO  acconfig.h  autogen.sh  config.h.in  configure.ac  configure.in  libuser-selinux.patch  libuser.conf  libuser.conf.in  libuser.g  libuser.pc.in  libuser.spec.in  zanata.xml
.tx/: config
apps/: Makefile.am  apputil.c  apputil.h  lchage.1  lchage.c  lchfn.1  lchfn.c  lchsh.1  lchsh.c  lgroupadd.1  lgroupadd.c  lgroupdel.1  lgroupdel.c  lgroupmod.1  lgroupmod.c  lid.1  lid.c  lnewusers.1  lnewusers.c  lpasswd.1  lpasswd.c  luseradd.1  luseradd.c  luserdel.1  luserdel.c  lusermod.1  lusermod.c
docs/: Makefile.am  attributes.txt  libuser.conf.5.in
docs/reference/: .cvsignore  Makefile.am  libuser-decl-list.txt  libuser-decl.txt  libuser-docs.sgml  libuser-sections.txt  libuser-undocumented.txt
docs/reference/tmpl/: config.sgml  entity.sgml  error.sgml  libuser-unused.sgml  prompt.sgml  quota.sgml  user.sgml  value.sgml
docs/sgml/: Makefile.am  libuser.sgml
include/: Makefile.am
include/libuser/: Makefile.am  config.h  entity.h  error.h  prompt.h  quota.h  trivial.c  user.h  user_private.h
lib/: Makefile.am  common.c  config.c  config.h  entity.c  entity.h  error.c  error.h  fs.c  fs.h  getdate.y  internal.h  misc.c  misc.h  modules.c  modules.h  prompt.c  prompt.h  scache.c  user.c  user.h  user_private.h  usercfg.c  userent.c  usererr.c  userprmt.c  userquota.3  userquota.c  userquota.h  usersc.c  userutil.c  util.c  util.h
modules/: Makefile.am  default.-c  files.c  krb5.c  ldap.c  modules.h  nis.c  sasldb.c  util.c  util.h
po/: .cvsignore  ChangeLog  LINGUAS  Makefile.in.in  POTFILES.in  POTFILES.skip  ar.po  as.po  bg.po  bn.po  bn_IN.po  bs.po  ca.po  cat-id-tbl.c  chef.po  cs.po  cy.po  da.po  de.po  de_CH.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fi.po.orig  fr.po  gu.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  is.po  it.po  ja.po  ka.po  kn.po  (+41 more)
python/: Makefile.am  admin.c  common.h  debug.h  ent.c  gtk_prompt_callback.py  ldap-script  libusermodule.c  misc.c  modules.txt  prompt-script  quota-script  quotamodule.c  test-script
quota/: Makefile.am  quota.h  user_quota.3  user_quota.c
samples/: Makefile.am  enum.c  field.c  homedir.c  lookup.c  prompt.c  quotaq.c  testuser.c
tests/: alloc_port.c  config.conf  config_default_useradd  config_login.defs  config_override.conf.in  config_test.c  config_test.sh  default_pw.conf.in  default_pw_test  default_pw_test.py  files_test  files_test.py  fs_test  fs_test.py  ldap.conf.in  ldap_test  ldap_test.py  pwhash.py  pwhash_test  slapd.conf.in  test_utils.sh  utils_group  utils_gshadow  utils_passwd  utils_shadow  utils_test  valgrind.supp
