AC_INIT(configure.in)
AM_INIT_AUTOMAKE(libuser,0.10)

AC_PROG_CC
AC_ISC_POSIX
AC_PROG_LN_S
AC_PATH_PROG(MAKE,make)
AC_PROG_MAKE_SET
AC_PROG_AWK

AM_PROG_LIBTOOL

AC_CHECK_LIB(crypt,crypt)
AM_PATH_GLIB(1.2.8,,,gmodule)

ALL_LINGUAS="chef"
AM_GNU_GETTEXT

popt=/usr
AC_ARG_WITH(popt,
[  --without-popt=DIR       Use popt headers and libraries under DIR],
[
if test x$withval != x -a x$withval != xyes ; then
  popt=$withval
fi
])
if test x$popt != xno ; then
	if test x$popt != x -a x$popt != x/usr ; then
		CFLAGS="$CFLAGS -I$popt/include"
		CPPFLAGS="$CPPFLAGS -I$popt/include"
		LIBS="$LIBS -L$popt/lib"
	fi
	AC_CHECK_HEADERS(popt.h)
	AC_CHECK_LIB(popt,poptGetContext)
fi

krb5=/usr/kerberos
AC_ARG_WITH(krb5,
[  --without-krb5=DIR       Use Kerberos 5 headers and libraries under DIR],
[
if test x$withval != x -a x$withval != xyes ; then
  krb5=$withval
fi
])
if test x$krb5 != xno ; then
	if test x$krb5 != x -a x$krb5 != x/usr ; then
		KRB5_CFLAGS="$CFLAGS -I$krb5/include"
		CPPFLAGS="$CPPFLAGS -I$krb5/include"
		KRB5_LIBS="$LIBS -L$krb5/lib"
	fi
	AC_CHECK_HEADERS(profile.h)
	AC_CHECK_LIB(k5crypto,krb5_des_string_to_key,KRB5_LIBS="-lk5crypto $KRB5_LIBS",,$KRB5_LIBS $LIBS)
	AC_CHECK_LIB(krb5,profile_init,KRB5_LIBS="-lkrb5 $KRB5_LIBS",,$KRB5_LIBS $LIBS)
	AC_CHECK_LIB(kadm5clnt,kadm5_chpass_principal,KRB5_LIBS="-lkadm5clnt $KRB5_LIBS",,$KRB5_LIBS $LIBS)
fi

ldap=/usr/ldap
AC_ARG_WITH(ldap,
[  --without-ldap=DIR       Use OpenLDAP 2.x headers and libraries under DIR],
[
if test x$withval != x -a x$withval != xyes ; then
  ldap=$withval
fi
])
if test x$ldap != xno ; then
	if test x$ldap != x -a x$ldap != x/usr ; then
		LDAP_CFLAGS="$CFLAGS -I$ldap/include"
		CPPFLAGS="$CPPFLAGS -I$ldap/include"
		LDAP_LIBS="$LIBS -L$ldap/lib"
	fi
	AC_CHECK_HEADERS(ldap.h)
	AC_CHECK_LIB(lber,ber_alloc,LDAP_LIBS="-llber $LDAP_LIBS",,$LDAP_LIBS $LIBS)
	AC_CHECK_LIB(ldap,ldap_sasl_bind_s,LDAP_LIBS="-lldap $LDAP_LIBS",,$LDAP_LIBS $LIBS)
fi

AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h sys/time.h unistd.h)

AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

AC_CHECK_FUNCS(strstr strtol)

AC_SUBST(KRB5_CFLAGS)
AC_SUBST(KRB5_LIBS)
AC_SUBST(LDAP_CFLAGS)
AC_SUBST(LDAP_LIBS)
AC_SUBST(NIS_CFLAGS)
AC_SUBST(NIS_LIBS)

AM_CONFIG_HEADER(config.h)

AC_OUTPUT(
Makefile
intl/Makefile
po/Makefile.in
include/Makefile
include/libuser/Makefile
lib/Makefile
quota/Makefile
modules/Makefile
python/Makefile
samples/Makefile
apps/Makefile
docs/Makefile
docs/sgml/Makefile
libuser.spec
)

sed \
	-e "s%@pkglibdir@%${libdir}/${PACKAGE}%" \
	-e "s%@sysconfdir@%${sysconfdir}%" \
	< ${srcdir}/libuser.conf.in > libuser.conf

$MAKE -C po -f Makefile.in Makefile
